[gd_scene load_steps=3 format=3 uid="uid://2p7a1aqmjtea"]

[ext_resource type="Script" path="res://menu.gd" id="1_louq5"]
[ext_resource type="Theme" uid="uid://6yt0638i1ha2" path="res://default_theme.tres" id="1_vouo0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 145.0
grow_vertical = 2
theme = ExtResource("1_vouo0")
script = ExtResource("1_louq5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 145.0
grow_vertical = 2
theme_type_variation = &"BackgroundPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LoadProgram" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load program"

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Reset" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="About" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "About"

[node name="CloseMenu" type="Button" parent="."]
layout_mode = 2
offset_left = 117.0
offset_top = 2.0
offset_right = 141.0
offset_bottom = 33.0
size_flags_horizontal = 8
size_flags_vertical = 4
text = "---
"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="CloseMenu" to="." method="_on_close_menu_pressed"]
